--- a/client_mobile/android/app/src/main/AndroidManifest.xml
+++ b/client_mobile/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="client_mobile"
+        android:label="Area"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon"
-        android:enableOnBackInvokedCallback="true">
+        android:icon="@mipmap/launcher_icon">
         <activity
-            android:name=".MainActivity"
+            android:name="com.asm_studios.area.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:taskAffinity=""
