--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -1,4 +1,4 @@
-name: client_mobile
+name: area
 description: Area app
 
 publish_to: 'none'
@@ -38,3 +38,25 @@ flutter:
     - .env
     - assets/area.png
     - assets/images/
+
+# flutter pub run flutter_launcher_icons
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/area.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/area.png"
+  web:
+    generate: true
+    image_path: "assets/area.png"
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
+  windows:
+    generate: true
+    image_path: "assets/area.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/area.png"
