--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       start_period: 40s
     profiles: [ "server", "web", "mobile", "full" ]
 
-  server-action-consumer:
+  server_action_consumer:
     build:
       context: ./server
       dockerfile: Dockerfile_action_consumer
@@ -99,7 +99,7 @@ services:
     restart: always
     profiles: [ "server", "web", "mobile", "full" ]
 
-  server-reaction-consumer:
+  server_reaction_consumer:
     build:
       context: ./server
       dockerfile: Dockerfile_reaction_consumer
@@ -129,21 +129,12 @@ services:
     build:
       context: ./client_mobile
       dockerfile: Dockerfile
-      args:
-        - API_URL
-        - WEB_CLIENT_URL
-        - MOBILE_CLIENT_URL
-        - GITHUB_CLIENT_ID
-        - GITHUB_CLIENT_SECRET
     volumes:
-      - ./client_mobile:/app
       - mobile_builds:/app/build/app/outputs/flutter-apk
-      - flutter_data:/root/.local/share/flutter:rw
-      - android_data:/root/.gradle:rw
-      - ide_support:/app/.dart_tool:rw
+      - ./client_mobile:/app
+      - ./client_mobile/.dart_tool:/app/.dart_tool
     ports:
       - "8082:8082"
-      - "8888:8888"
     networks:
       - area_network
     env_file:
@@ -154,10 +145,10 @@ services:
         condition: service_healthy
     restart: "no"
     healthcheck:
-      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "-O", "/dev/null", "http://0.0.0.0:8082" ]
+      test: [ "CMD", "test", "-f", "/app/build/app/outputs/flutter-apk/client.apk" ]
       interval: 10s
       timeout: 10s
-      retries: 10
+      retries: 30
       start_period: 150s
 
   client_web:
@@ -182,7 +173,7 @@ services:
     ports:
       - "${VITE_PORT}:${VITE_PORT}"
     volumes:
-      - mobile_builds:/usr/share/nginx/html/mobile_builds:ro
+      - mobile_builds:/app/public:ro
     depends_on:
       server:
         condition: service_healthy
@@ -202,7 +193,7 @@ services:
       start_period: 60s
     profiles: [ "web", "full" ]
 
-  server-healthcheck:
+  server_healthcheck:
     image: alpine:3.20.3
     depends_on:
       mariadb:
@@ -214,7 +205,7 @@ services:
     profiles: [ "server" ]
     restart: "no"
 
-  web-healthcheck:
+  web_healthcheck:
     image: alpine:3.20.3
     depends_on:
       mariadb:
@@ -230,7 +221,7 @@ services:
     profiles: [ "web" ]
     restart: "no"
 
-  mobile-healthcheck:
+  mobile_healthcheck:
     image: alpine:3.20.3
     depends_on:
       mariadb:
@@ -244,7 +235,7 @@ services:
     profiles: [ "mobile" ]
     restart: "no"
 
-  full-healthcheck:
+  full_healthcheck:
     image: alpine:3.20.3
     depends_on:
       mariadb:
@@ -256,7 +247,7 @@ services:
       client_web:
         condition: service_healthy
       client_mobile:
-        condition: service_started
+        condition: service_healthy
     environment:
       - VITE_PORT=${VITE_PORT}
     profiles: [ "full" ]
@@ -265,9 +256,6 @@ services:
 volumes:
   mobile_builds:
   mariadb_data:
-  flutter_data:
-  android_data:
-  ide_support:
 
 
 networks:
